--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.6.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -23,10 +24,12 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "framer-motion": "^10.17.0",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.20.1",
     "swiper": "^11.0.5",
