--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.12.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.20.1",
+    "react-social-media-embed": "^2.5.9",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
